# sar

./: .swp  Cargo.toml  README.md  aymcp-exec-cli.cfg  cobertura.xml  config.toml  grammar.txt  log.txt  problem.md  state.md  test.toml
docs/attic/: async-tools-context.md  async-tools-thoughts.md
docs/specs/: actor-tools.md  pending-input.md
misc/: grammar.txt
sar-core/: Cargo.toml
sar-core/src/: actor.rs  bus.rs  config.rs  lib.rs  message.rs
sar-core/tests/: bus_tests.rs  config_tests.rs  message_tests.rs
sar-echo/: Cargo.toml
sar-echo/src/: echo_actor.rs  lib.rs  main.rs
sar-echo/tests/: echo_actor_tests.rs
sar-llm/: Cargo.toml
sar-llm-test/: Cargo.toml
sar-llm-test-loop/: Cargo.toml
sar-llm-test-loop-tools/: Cargo.toml
sar-llm-test-loop-tools/src/: calculator.rs  lib.rs  main.rs  sleep_tool.rs  system_message_tools.rs  tool_actor.rs  tool_actor_wrapper.rs
sar-llm-test-loop-tools/tests/: tool_actor_tests.rs
sar-llm-test-loop/src/: lib.rs  main.rs
sar-llm-test/src/: lib.rs
sar-llm-test/tests/: llm_test_actor_tests.rs
sar-llm/src/: lib.rs
sar-llm/tests/: llm_actor_tests.rs
sar-mcp-server/: Cargo.toml
sar-mcp-server/src/: lib.rs
sar-reverse/: Cargo.toml
sar-reverse/src/: lib.rs
sar-reverse/tests/: reverse_actor_tests.rs
sar-server/: Cargo.toml
sar-server/src/: index.html  lib.rs  main.rs  server.rs
sar-server/tests/: server_tests.rs
sar-tool-actors/: Cargo.toml
sar-tool-actors/src/: lib.rs
sar-tool-calculator/: Cargo.toml
sar-tool-calculator/src/: lib.rs
sar-tool-mcp/: Cargo.toml
sar-tool-mcp/src/: lib.rs
sar-tool-sleep/: Cargo.toml
sar-tool-sleep/src/: lib.rs
sar-tracing/: Cargo.toml
sar-tracing/src/: lib.rs
sar-tui/: Cargo.toml
sar-tui/src/: lib.rs  main.rs  tui_actor.rs
sar-ui-hub/: Cargo.toml
sar-ui-hub/src/: lib.rs
sar-ui-hub/tests/: continue_detection_tests.rs
scripts/: tttt-mcp
src/: main.rs
