[workspace]
members = [
    ".",
    "sar-core",
    "sar-tui",
    "sar-echo",
    "sar-reverse",
    "sar-server",
    "sar-tracing",
    "sar-llm",
    "sar-llm-test", "sar-llm-test-loop", "sar-llm-test-loop-tools", "sar-ui-hub",
]
resolver = "2"

[package]
name = "sar"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sar"
path = "src/main.rs"

[dependencies]
sar-core = { path = "sar-core" }
sar-tui = { path = "sar-tui" }
sar-echo = { path = "sar-echo" }
sar-reverse = { path = "sar-reverse" }
sar-server = { path = "sar-server" }
sar-tracing = { path = "sar-tracing" }
sar-llm = { path = "sar-llm" }
sar-llm-test = { path = "sar-llm-test" }
sar-llm-test-loop = { path = "sar-llm-test-loop" }
sar-llm-test-loop-tools = { path = "sar-llm-test-loop-tools" }
sar-ui-hub = { path = "sar-ui-hub" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
