[package]
name = "sar-echo"
version = "0.1.0"
edition = "2024"

[lib]
name = "sar_echo"
path = "src/lib.rs"

[[bin]]
name = "sar-echo"
path = "src/echo_actor.rs"

[dependencies]
sar-core = { path = "../sar-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"