[package]
name = "sar-llm-test-loop-tools"
version = "0.1.0"
edition = "2024"

[lib]
name = "sar_llm_test_loop_tools"
path = "src/lib.rs"

[[bin]]
name = "sar-llm-test-loop-tools"
path = "src/main.rs"

[dependencies]
sar-core = { path = "../sar-core" }
sar-llm = { path = "../sar-llm" }
sar-tool-actors = { path = "../sar-tool-actors" }
sar-tool-calculator = { path = "../sar-tool-calculator" }
sar-tool-sleep = { path = "../sar-tool-sleep" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"