[package]
name = "sar-llm-test-loop"
version = "0.1.0"
edition = "2024"

[lib]
name = "sar_llm_test_loop"
path = "src/lib.rs"

[[bin]]
name = "sar-llm-test-loop"
path = "src/main.rs"

[dependencies]
sar-core = { path = "../sar-core" }
sar-llm = { path = "../sar-llm" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"