[package]
name = "sar-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
sar-core = { path = "../sar-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockllm = { git = "https://github.com/ayourtch-llm/mockllm.git" }