[package]
name = "sar-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sar-core = { path = "../sar-core" }
sar-tool-actors = { path = "../sar-tool-actors" }
rmcp = { version = "0.16", features = ["client", "transport-io", "transport-child-process"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"