[package]
name = "sar-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "sar_server"
path = "src/lib.rs"

[[bin]]
name = "sar-server"
path = "src/server.rs"

[dependencies]
sar-core = { path = "../sar-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"